Fixed the scrollbar on chrome

--- a/src/styling/_form.scss
+++ b/src/styling/_form.scss
@@ -59,7 +59,7 @@
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
 
-        ::-webkit-scrollbar {
+        &::-webkit-scrollbar {
             display: none;
         }
     }
